rm pubsub
Signed-off-by: Cassandra Coyle <cassie@diagrid.io>